[gd_scene load_steps=5 format=3 uid="uid://cjgjef3cy2o0f"]

[ext_resource type="Script" uid="uid://d28ryaeuui7bh" path="res://scenes/menus/game_over/game_over_screen.gd" id="1_1n3bm"]
[ext_resource type="StyleBox" uid="uid://bl1cxbgmx01jl" path="res://assets/tiles/button inventory hover.tres" id="2_v1nh5"]
[ext_resource type="StyleBox" uid="uid://dpyi3tekla651" path="res://assets/tiles/button inventory normal.tres" id="3_3a1gr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_680q2"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1n3bm")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.6856, 0.592, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Game Over"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../Endless")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxEmpty_680q2")
theme_override_styles/hover = ExtResource("2_v1nh5")
theme_override_styles/pressed = ExtResource("2_v1nh5")
theme_override_styles/normal = ExtResource("3_3a1gr")
text = "Restart"

[node name="Endless" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxEmpty_680q2")
theme_override_styles/hover = ExtResource("2_v1nh5")
theme_override_styles/pressed = ExtResource("2_v1nh5")
theme_override_styles/normal = ExtResource("3_3a1gr")
text = "Play Endless"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Endless")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = ExtResource("2_v1nh5")
theme_override_styles/pressed = ExtResource("2_v1nh5")
theme_override_styles/normal = ExtResource("3_3a1gr")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Endless" to="." method="_on_endless_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
